# talk-to-files

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
components/: file-screen.tsx  search-screen.tsx  theme-provider.tsx
components/ui/: datatable.tsx  popover.tsx  tooltip.tsx
lib/types/: types.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  model.rs
