[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
accelerate-src = { version = "0.3.2" }
anyhow = "1.0.75"
bincode = "2.0.0-rc.3"
# candle = { version = "0.3.1", package = "candle-core", features= ["cuda"] }
candle = { version = "0.3.1", package = "candle-core" }
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
clap = "4.4.10"
csv = "1.3.0"
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] ,optional = true }
rayon = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6.2", features = [ "window-start-dragging", "path-all", "dialog-all", "fs-all"] }
tokenizers = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
